[package]
name = "tentaflow"
version = "0.0.2-alpha"
edition = "2021"
description = "TentaFlow — API Gateway i mesh node"
build = "build.rs"

[features]
rdma-probe = ["tentaflow-core/rdma-probe"]
gpu-cuda = ["tentaflow-core/gpu-cuda"]
gpu-vulkan = ["tentaflow-core/gpu-vulkan"]
gpu-rocm = ["tentaflow-core/gpu-rocm"]
gpu-metal = ["tentaflow-core/gpu-metal"]

[dependencies]
tentaflow-core = { path = "../tentaflow-core", features = ["docker", "dashboard-api", "metrics-prometheus", "inference-diarization"] }
tentaflow-protocol = { path = "../tentaflow-protocol" }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8.12", features = ["unaligned"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http-body = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
parking_lot = "0.12"
# Self-update — `tentaflow update` pobiera nowsza wersje z GitHub Releases
# i podmienia biezaca binarke (external updater process — Windows nie blokuje
# pliku w trakcie kopiowania).
axoupdater = { version = "0.9", features = ["blocking"] }

# MLX inference — tylko na macOS. Implementacja przez Swift bridge
# (libMLXBridge.dylib + mlx-swift_Cmlx.bundle) — patrz build.rs i
# src/mlx_swift_init.rs.
[target.'cfg(target_os = "macos")'.dependencies]
tentaflow-core = { path = "../tentaflow-core", features = ["inference-mlx", "inference-mlx-whisper", "inference-apple-tts"] }
libloading = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
