[package]
name = "tentaflow"
version = "0.0.2-alpha"
edition = "2021"
description = "TentaFlow — API Gateway i mesh node"
build = "build.rs"

[features]
rdma-probe = ["tentaflow-core/rdma-probe"]
gpu-cuda = ["tentaflow-core/gpu-cuda"]
gpu-vulkan = ["tentaflow-core/gpu-vulkan"]
gpu-rocm = ["tentaflow-core/gpu-rocm"]
gpu-metal = ["tentaflow-core/gpu-metal"]

[dependencies]
tentaflow-core = { path = "../tentaflow-core", features = ["docker", "dashboard-api", "metrics-prometheus", "inference-diarization", "inference-sherpa"] }
tentaflow-protocol = { path = "../tentaflow-protocol" }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8.12", features = ["unaligned"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
http-body = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
parking_lot = "0.12"
# Self-update — `tentaflow update` pobiera nowsza wersje z GitHub Releases
# i podmienia biezaca binarke (external updater process — Windows nie blokuje
# pliku w trakcie kopiowania).
axoupdater = { version = "0.9", features = ["blocking"] }

# MLX inference — tylko na macOS. Implementacja przez Swift bridge
# (libMLXBridge.dylib + mlx-swift_Cmlx.bundle) — patrz build.rs i
# src/mlx_swift_init.rs.
[target.'cfg(target_os = "macos")'.dependencies]
tentaflow-core = { path = "../tentaflow-core", features = ["inference-mlx", "inference-mlx-whisper", "inference-mlx-kokoro"] }
libloading = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
# panic=abort skraca binarke o tablice unwind i pozwala kompilatorowi pominac
# landing pady — mniejszy rozmiar i nieco szybsze hot paths. Crash terminuje
# proces zamiast unwindowac (akceptowalne dla server binary).
panic = "abort"

# release-fast: dev iteracje gdzie chcesz produkcyjny opt-level ale BEZ
# wielominutowego LTO + single-codegen. Buduj przez `cargo build --profile
# release-fast`. Roznice vs release:
#   * lto = "thin"        — 80% korzysci LTO za ~30% czasu (8x szybszy link)
#   * codegen-units = 32  — codegen rownolegly. Wartosc dobrana zeby maszyny
#                            16/32 cpu mialy pelna paralelizacje (codegen
#                            jest threadowany w rustc); na 8-cpu nadmiarowe
#                            unity czekaja w kolejce — koszt minimalny.
#                            Override per-machine ENV:
#                              CARGO_PROFILE_RELEASE_FAST_CODEGEN_UNITS=64
# Binarka tylko ~2-5% wolniejsza w runtime — nieistotne dla dev.
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 32
strip = false   # debuginfo zostaje — backtrace przy crashu pokazuje funkcje

# Szybszy dev `cargo build` (bez --release). Domyslny profil.dev ma
# debug=true co daje GIGABYTOWE binarki i wolne linkowanie. Ograniczamy
# do debug=1 (line numbers tylko, bez full debug-info) — backtrace dziala,
# linker robi 3-5x mniej roboty. codegen-units=256 daje cargo wystarczajaco
# duzo malych jednostek zeby kazda maszyna (8/16/32 cpu) wykorzystala
# wszystkie rdzenie rownolegle.
[profile.dev]
debug = 1
incremental = true
codegen-units = 256
opt-level = 0
