[package]
name = "tentaflow-client-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "tentaflow_client_native"
crate-type = ["cdylib", "staticlib", "lib"]

# [[bin]]
# name = "test-client"
# path = "src/bin/test_client.rs"

[dependencies]
# QUIC
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
webpki-roots = "1.0.4"

# Serialization (rkyv for Router communication)
tentaflow-protocol = { path = "../../tentaflow-protocol" }
rkyv = { version = "0.8", features = ["std", "bytecheck"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

parking_lot = "0.12"
ahash = "0.8"
smallvec = { version = "1.13", features = ["union", "const_generics"] }

# Utils
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
once_cell = "1"

# FFI helpers
libc = "0.2"

[build-dependencies]
cbindgen = "0.28"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
