[package]
name = "tentaflow-client-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "tentaflow_client_native"
crate-type = ["cdylib", "staticlib", "lib"]

# [[bin]]
# name = "test-client"
# path = "src/bin/test_client.rs"

[dependencies]
# Transport — iroh P2P + wspolny framework TentaFlow
tentaflow-protocol = { path = "../../tentaflow-protocol" }
tentaflow-transport = { path = "../../tentaflow-transport" }
iroh = { version = "0.98.0", default-features = false, features = ["address-lookup-mdns", "address-lookup-pkarr-dht", "portmapper", "tls-ring"] }

# Serialization
rkyv = { version = "0.8", features = ["std", "bytecheck"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

parking_lot = "0.12"

# Utils
anyhow = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
once_cell = "1"

[build-dependencies]
cbindgen = "0.28"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
