[package]
name = "tentaflow-sidecar"
version = "0.1.0"
edition = "2021"
description = "Generyczny sidecar iroh dla kontenerow TentaFlow (llm/stt/tts/embeddings/reranker). Rola wybierana z config.toml, kontener AI nic nie wie o transporcie."

[lib]
name = "tentaflow_sidecar"
path = "src/lib.rs"

[[bin]]
name = "tentaflow-sidecar"
path = "src/main.rs"

[dependencies]
tentaflow-protocol = { path = "../../tentaflow-protocol" }
tentaflow-transport = { path = "../../tentaflow-transport" }
iroh = { version = "0.98.0", default-features = false, features = ["address-lookup-mdns", "address-lookup-pkarr-dht", "portmapper", "tls-ring"] }
rkyv = { version = "0.8", features = ["unaligned"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
parking_lot = "0.12"

reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "multipart"] }
bytes = "1"
futures-util = "0.3"

toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
hex = "0.4"

[dev-dependencies]
tentaflow-transport = { path = "../../tentaflow-transport" }
