[package]
name = "tentaflow-sidecar"
version = "0.1.0"
edition = "2021"
description = "Generyczny sidecar iroh dla kontenerow TentaFlow (llm/stt/tts/embeddings/reranker). Rola wybierana z config.toml, kontener AI nic nie wie o transporcie."

[lib]
name = "tentaflow_sidecar"
path = "src/lib.rs"

[[bin]]
name = "tentaflow-sidecar"
path = "src/main.rs"

[dependencies]
tentaflow-protocol = { path = "../../tentaflow-protocol" }
tentaflow-transport = { path = "../../tentaflow-transport" }
iroh = { version = "=0.98.2", default-features = false, features = ["address-lookup-mdns", "address-lookup-pkarr-dht", "portmapper", "tls-ring"] }

tokio = { version = "1.52.2", features = ["full"] }

reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "stream", "multipart"] }
futures-util = "0.3"

toml = "1.1.2+spec-1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
tentaflow-transport = { path = "../../tentaflow-transport" }

[patch.crates-io]
ed25519-dalek = { path = "../../vendor/ed25519-dalek" }
