[package]
name = "tentaflow-teams-bot"
version = "0.1.0"
edition = "2021"
description = "Sidecar do spotkan Teams — automatyzacja przegladarki + audio pipeline"

[[bin]]
name = "tentaflow-meeting"
path = "src/main.rs"

[dependencies]
# Protokol i serializacja
tentaflow-protocol = { path = "../../tentaflow-protocol" }
rkyv = { version = "0.8", features = ["unaligned"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Automatyzacja przegladarki
chromiumoxide = "0.9"
futures = "0.3"

# Audio (PulseAudio — ALSA nie dziala w Docker bez /dev/snd)
libpulse-binding = "2"
libpulse-simple-binding = "2"

# QUIC serwer
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"

# Konfiguracja
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Inne
anyhow = "1"
byteorder = "1"
uuid = { version = "1", features = ["v4"] }
