[package]
name = "tentaflow-desktop-windows"
version = "0.1.0"
edition = "2021"
description = "TentaFlow Desktop — Windows wrapper"

[[bin]]
name = "tentaflow-desktop"
path = "src/main.rs"

[dependencies]
tentaflow-desktop-core = { path = "../core" }
anyhow = "1.0"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
