[package]
name = "tentaflow-mobile"
version = "0.1.0"
edition = "2021"
description = "TentaFlow Mobile — iOS/Android z mesh networking i lokalnym LLM"

[lib]
name = "tentaflow_mobile"
crate-type = ["staticlib"]

[dependencies]
tentaflow-core = { path = "../../tentaflow-core", features = ["docker", "inference-llamacpp", "dashboard-api"] }
tentaflow-ui = { path = "../../tentaflow-ui" }
tentaflow-protocol = { path = "../../tentaflow-protocol" }
hostname = "0.4"
eframe = { version = "0.30", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.30"

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dirs = "5"
uuid = { version = "1.0", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[target.'cfg(target_os = "ios")'.dependencies]
tentaflow-core = { path = "../../tentaflow-core", features = ["docker", "inference-llamacpp", "inference-mlx-swift", "dashboard-api"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
android-activity = "0.6"
