[package]
name = "tentaflow-mobile"
version = "0.1.0"
edition = "2021"
description = "TentaFlow Mobile — iOS/Android z mesh networking i lokalnym LLM"

[lib]
name = "tentaflow_mobile"
crate-type = ["staticlib"]

[dependencies]
tentaflow-core = { path = "../../tentaflow-core", features = ["docker", "inference-llamacpp", "dashboard-api"] }
tentaflow-ui = { path = "../../tentaflow-ui" }
eframe = { version = "0.30", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.30"

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dirs = "5"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
hex = "0.4"
data-encoding = "2"

[target.'cfg(target_os = "ios")'.dependencies]
tentaflow-core = { path = "../../tentaflow-core", features = ["docker", "inference-llamacpp", "inference-mlx", "dashboard-api"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
