[package]
name = "tentaflow-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tentaflow-protocol = { path = ".." }
rkyv = { version = "0.8.12", features = ["unaligned"] }

[[bin]]
name = "envelope_decode"
path = "fuzz_targets/envelope_decode.rs"
test = false
doc = false

[[bin]]
name = "message_body_decode"
path = "fuzz_targets/message_body_decode.rs"
test = false
doc = false
