[package]
name = "tentaflow-addon-camera-test"
version = "0.1.0"
edition = "2021"
description = "M1.W6 Chunk D — e2e test addon exercising camera_* host functions through real WASM."

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
tentaflow-addon-sdk = { path = "../../addon-sdk/sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
