[package]
name = "tentaflow-teams-bot"
version = "0.1.0"
edition = "2021"
description = "Sidecar do spotkan Teams — automatyzacja przegladarki + audio pipeline"

[[bin]]
name = "tentaflow-meeting"
path = "src/main.rs"

[dependencies]
# Protokol i transport iroh
tentaflow-protocol = { path = "../../../../tentaflow-protocol" }
tentaflow-transport = { path = "../../../../tentaflow-transport" }
iroh = { version = "0.98.2", default-features = false, features = ["address-lookup-mdns", "address-lookup-pkarr-dht", "portmapper", "tls-ring"] }

# Async runtime
tokio = { version = "1.52.2", features = ["full"] }

# Automatyzacja przegladarki
chromiumoxide = "0.9"
futures = "0.3"

# WebSocket serwer localhost — most audio miedzy Chromium (JS) a Rust
tokio-tungstenite = "0.29.0"

# Lock-free atomic snapshot — uzywany dla roster JSON cache (dom_observer ->
# STT hot path). Pozwala uniknac async RwLock + serde_json::to_string per
# segment STT.
arc-swap = "1.7.1"

# Silero VAD — pure Rust implementation z tentaflow-voice
tentaflow-voice = { path = "../../../../tentaflow-voice" }
parking_lot = "0.12"

# Konfiguracja
toml = "1.1.2+spec-1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Inne
anyhow = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
bytemuck = "1"
# Dekodowanie base64 z DomEvent::VideoFrame — JS→Rust przez CDP binding nosi
# tylko JSON, więc binarne klatki idą jako base64; tu wracamy do bajtów
# zanim payload trafi do rkyv.
base64 = "0.22.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "noop"
harness = false

[[bench]]
name = "vad_chunk_processing"
harness = false

[[bench]]
name = "wake_word_match"
harness = false

[[bench]]
name = "prepad_ringbuffer"
harness = false

[[bench]]
name = "roster_emit_concurrency"
harness = false

[[bench]]
name = "sentence_buffer"
harness = false

[[bench]]
name = "intent_classifier"
harness = false
